Long strings on Search widget not getting shortened/no tooltip #38678

Closed
opened 2014-02-17 14:20:25 +01:00 by Pablo Vazquez · 7 comments
Member

Long strings don't fit the Search widget. They could get shortened and/or even have a tooltip with the actual name.

In the image below I'm making a proxy of objects with long names but is hard to know which one is which (of course this could be solved by renaming but when working on a big production this can be too expensive)
long_strings_on_search.png

Ubuntu 12.04 - NVIDIA GeForce GTX 650
Tested on Blender 2.69.10 (fdcdd5e)

Thanks!

Long strings don't fit the Search widget. They could get shortened and/or even have a tooltip with the actual name. In the image below I'm making a proxy of objects with long names but is hard to know which one is which (of course this could be solved by renaming but when working on a big production this can be too expensive) ![long_strings_on_search.png](https://archive.blender.org/developer/F77743/long_strings_on_search.png) Ubuntu 12.04 - NVIDIA GeForce GTX 650 Tested on Blender 2.69.10 (fdcdd5e) Thanks!
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @pablovazquez

Added subscriber: @pablovazquez

Added subscriber: @brecht

Added subscriber: @brecht
Bastien Montagne self-assigned this 2014-02-19 16:26:02 +01:00

This issue was referenced by blender/blender-addons-contrib@c35ac8f7ac

This issue was referenced by blender/blender-addons-contrib@c35ac8f7accf264e21f3f959ca99d05b6e04de88

This issue was referenced by c35ac8f7ac

This issue was referenced by c35ac8f7accf264e21f3f959ca99d05b6e04de88

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c35ac8f7ac.

Closed by commit c35ac8f7ac.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38678
No description provided.